# DeepNumPy-AI-Library

./: .gitignore  README.md  phase4_classifier_checkpoint.npz  pyproject.toml  requirements.txt
ai/: __init__.py
ai/core/: __init__.py  tensor.py
ai/data/: __init__.py  dataloader.py  dataset.py
ai/losses/: __init__.py  losses.py
ai/nn/: __init__.py  modules.py
ai/optim/: __init__.py  optimizers.py
ai/sequence/: __init__.py  layers.py
ai/training/: __init__.py  checkpoint.py  metrics.py  trainer.py
ai/transformer/: __init__.py  layers.py
ai/utils/: __init__.py  graph.py  summary.py
ai/vision/: __init__.py  layers.py
docs/: phase8_xor_computation_graph.dot
examples/: core_autograd_demo.py  phase2_nn_demo.py  phase3_xor_training.py  phase4_training_workflow.py  phase5_cnn_vision.py  phase6_sequence_models.py  phase7_transformer_classifier.py  phase8_graph_and_summary.py
tests/: test_losses_optim.py  test_nn.py  test_sequence.py  test_tensor.py  test_training_workflow.py  test_transformer.py  test_utils.py  test_vision.py
